--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "@nestjs/mongoose": "7.2.0",
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "7.6.5",
+    "@nestjs/serve-static": "^2.1.4",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "crypto-js": "^4.0.0",
     "hat": "0.0.3",
     "mongoose": "5.11.9",
+    "node-telegram-bot-api": "^0.53.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
