install telegraf but not working now

--- a/dev.env
+++ b/dev.env
@@ -1,2 +1,2 @@
-DATABASE_CONNECTION=mongodb://localhost:27017/so_ghi_no?readPreference=primary&appname=MongoDB%20Compass&ssl=false
-SECRET_KEY=CHAT_BOT_2021
+TOKEN_BOT
+PORT
