--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@nestjs/config": "^0.6.3",
     "@nestjs/core": "7.6.5",
     "@nestjs/platform-express": "7.6.5",
+    "axios": "^0.21.1",
     "node-telegram-bot-api": "^0.53.0",
+    "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
     "rxjs": "6.6.3",
     "telegraf": "^4.4.0"
